# realestate-agent

./: .env.example  .gitignore  LICENSE  README.md  app.py  pyproject.toml  realestate-agent.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  pr-title.yml
.streamlit/: secrets.toml.example
docs/: eval-methodology.md
evals/: cache.py  cases.json  models.py  parse_memo.py  run_evals.py  snapshot.py
evals/snapshots/: bemowo-metro.json  bialoleka-new-build.json  bialoleka-ogrod.json  bielany-apartament.json  bielany-panorama.json  mokotow-4-room.json  mokotow-plac-unii.json  ochota-kamienica.json  ochota-kawalerka.json  powisle-studio.json  srodmiescie-kamienica.json  targowek-brodno.json  ursus-3-room.json  ursus-klimatyzacja.json  ursynow-metro-natolin.json  ursynow-ogrodek.json  wawer-borki.json  wawer-new-build.json  wilanow-3-room.json  wilanow-penthouse.json  wlochy-rakow.json  wola-1959-spoldzielcze-ground-floor.json  wola-ogrodek-taras.json  zoliborz-artystyczny.json  zoliborz-ogrodek.json
examples/: sample-memo.md
src/: __main__.py  agent.py  cli.py  config.py  cost.py  models.py  url_validation.py
src/prompts/: system.md
src/rag/: __init__.py  chunking.py  corpus_manifest.toml  embed.py  ingest.py  store.py
src/tools/: __init__.py  _otodom.py  analyse_listing_photos.py  calculate_gross_yield.py  find_comparable_properties.py  get_district_demographics.py  get_district_market_stats.py  get_nearby_amenities.py  get_property_details.py  search_market_reports.py
tests/: test_agent.py  test_analyse_listing_photos.py  test_app.py  test_calculate_gross_yield.py  test_cli.py  test_config.py  test_cost.py  test_eval_parse.py  test_find_comparable_properties.py  test_get_district_demographics.py  test_get_district_market_stats.py  test_get_nearby_amenities.py  test_get_property_details.py  test_rag_chunking.py  test_rag_embed.py  test_search_market_reports.py  test_snapshot.py  test_url_validation.py
tests/fixtures/: otodom_search_wola.html  otodom_wesola.html  otodom_wola.html  overpass_wola.json
