[project]
name = "realestate-agent"
version = "0.1.0"
description = "Warsaw residential investment-analyst agent."
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.102.0",
    "beautifulsoup4>=4.14.3",
    "httpx>=0.28.1",
    "pgvector>=0.4.2",
    "psycopg[binary]>=3.3.4",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "voyageai>=0.3.7",
]

[dependency-groups]
dev = [
    "pyright>=1.1.409",
    "pytest>=9.0.3",
    "pytest-httpx>=0.36.2",
    "ruff>=0.15.12",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "I",    # isort (import order)
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
    "RUF",  # ruff-native rules
]
ignore = [
    "E501",  # line-too-long: ruff formatter handles long strings; we don't need to be strict
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.13"
typeCheckingMode = "basic"
reportMissingImports = "error"
reportMissingTypeStubs = "none"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
