[project]
name = "realestate-agent"
version = "0.1.0"
description = "Warsaw residential investment-analyst agent."
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.102.0",
    "beautifulsoup4>=4.14.3",
    "httpx>=0.28.1",
    "pgvector>=0.4.2",
    "psycopg[binary]>=3.3.4",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "voyageai>=0.3.7",
]

[dependency-groups]
dev = [
    "deptry>=0.25.1",
    "pyright>=1.1.409",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-httpx>=0.36.2",
    "ruff>=0.15.12",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "I",    # isort (import order)
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
    "RUF",  # ruff-native rules
    "C90",  # mccabe — cyclomatic complexity ceiling (default max 10)
    "N",    # pep8-naming
    "S",    # flake8-bandit (security)
    "PT",   # flake8-pytest-style
    "RET",  # flake8-return (no unnecessary else after return, etc.)
    "ARG",  # flake8-unused-arguments
]
ignore = [
    "E501",  # line-too-long: ruff formatter handles long strings; we don't need to be strict
]

[tool.ruff.lint.per-file-ignores]
# Tests legitimately use `assert` (S101), may have unused mock-fn / fixture
# args (ARG001/ARG002/ARG005), and access private symbols on purpose
# (the `_PhotoAnalysisLLM` import).
"tests/**" = ["S101", "ARG001", "ARG002", "ARG005"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.13"
typeCheckingMode = "basic"
reportMissingImports = "error"
reportMissingTypeStubs = "none"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --cov --cov-report=term --cov-report=xml"

[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    # Module entry-point shim — three trivial lines, not worth covering.
    "src/__main__.py",
]

[tool.coverage.report]
# Below this and CI fails. Now that agent.py / cli.py are covered, the
# measured floor is ~95% (line + branch). Threshold ratcheted to 90 — leaves
# 5pp of headroom for the inevitable error-path corner cases.
fail_under = 90
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.deptry]
# These are pre-installed deps for Week 3 (RAG over Polish market reports).
# They'll start showing imports once that work lands.
[tool.deptry.per_rule_ignores]
DEP002 = ["pgvector", "psycopg", "voyageai"]
