[project]
name = "realestate-agent"
version = "0.1.0"
description = "Warsaw residential investment-analyst agent."
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.102.0",
    "beautifulsoup4>=4.14.3",
    "httpx>=0.28.1",
    "pgvector>=0.4.2",
    "psycopg[binary]>=3.3.4",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "voyageai>=0.3.7",
]

[dependency-groups]
dev = [
    "deptry>=0.25.1",
    "pyright>=1.1.409",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-httpx>=0.36.2",
    "ruff>=0.15.12",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",       # pycodestyle errors
    "F",       # pyflakes
    "W",       # pycodestyle warnings
    "I",       # isort (import order)
    "B",       # flake8-bugbear
    "UP",      # pyupgrade
    "SIM",     # flake8-simplify
    "RUF",     # ruff-native rules
    "C90",     # mccabe — cyclomatic complexity ceiling (default max 10)
    "N",       # pep8-naming
    "S",       # flake8-bandit (security)
    "PT",      # flake8-pytest-style
    "RET",     # flake8-return (no unnecessary else after return, etc.)
    "ARG",     # flake8-unused-arguments
    "C4",      # flake8-comprehensions — simpler / faster comprehensions
    "DTZ",     # flake8-datetimez — naive datetimes are a silent-bug magnet
    "A",       # flake8-builtins — don't shadow `id`, `type`, `list`, etc.
    "LOG",     # flake8-logging — logging-call correctness
    "G",       # flake8-logging-format — lazy %-args in log calls, not f-strings
    "PIE",     # flake8-pie — misc anti-patterns (dup keys, needless dicts, ...)
    "ISC",     # flake8-implicit-str-concat
    "RSE",     # flake8-raise — no needless parens on raise
    "FLY",     # flynt — static str joins should be f-strings
    "PTH",     # flake8-use-pathlib — pathlib over os.path
    "ERA",     # eradicate — flag commented-out code (a form of dead code)
    "PGH",     # pygrep-hooks — no blanket `# noqa` / `# type: ignore`
    "PLR2004", # pylint — magic value used in comparison
]
ignore = [
    "E501",    # line-too-long: ruff formatter handles long strings
    "ISC001",  # single-line implicit str concat: conflicts with the formatter
]

[tool.ruff.lint.per-file-ignores]
# Tests legitimately use `assert` (S101), may have unused mock-fn / fixture
# args (ARG001/ARG002/ARG005), and access private symbols on purpose
# (the `_PhotoAnalysisLLM` import). PLR2004 is silenced because a test's
# whole job is comparing against literal expected values — naming every
# `2024` or `145000` as a constant would hurt readability, not help it.
"tests/**" = ["S101", "ARG001", "ARG002", "ARG005", "PLR2004"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
include = ["src", "tests", "evals"]
pythonVersion = "3.13"
typeCheckingMode = "basic"
reportMissingImports = "error"
reportMissingTypeStubs = "none"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --cov --cov-report=term --cov-report=xml"

[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    # Module entry-point shim — three trivial lines, not worth covering.
    "src/__main__.py",
]

[tool.coverage.report]
# Below this and CI fails. Now that agent.py / cli.py are covered, the
# measured floor is ~95% (line + branch). Threshold ratcheted to 90 — leaves
# 5pp of headroom for the inevitable error-path corner cases.
fail_under = 90
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.deptry]
# These are pre-installed deps for Week 3 (RAG over Polish market reports).
# They'll start showing imports once that work lands.
[tool.deptry.per_rule_ignores]
DEP002 = ["pgvector", "psycopg", "voyageai"]
